// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectInput it renders a multiple select array if one is passed 1`] = `
<div
  className=""
  key="select-containermyField"
  title=""
>
  <select
    id="myField"
    key="myField"
    multiple={true}
    name="myField"
    onChange={[Function]}
    value={Array []}
  >
    <option
      id="myField_0"
      key="myField_0"
      value={0}
    >
      None
    </option>
    <option
      id="myField_H"
      key="myField_H"
      value="H"
    >
      Home
    </option>
    <option
      id="myField_A"
      key="myField_A"
      value="A"
    >
      Away
    </option>
    <option
      id="myField_O"
      key="myField_O"
      value="O"
    >
      Other
    </option>
  </select>
</div>
`;

exports[`SelectInput it renders a multiple select array if one is passed with correct size 1`] = `
<div
  className=""
  key="select-containermyField"
  title=""
>
  <select
    id="myField"
    key="myField"
    multiple={true}
    name="myField"
    onChange={[Function]}
    size={2}
    value={Array []}
  >
    <option
      id="myField_H"
      key="myField_H"
      value="H"
    >
      Home
    </option>
    <option
      id="myField_A"
      key="myField_A"
      value="A"
    >
      Away
    </option>
    <option
      id="myField_O"
      key="myField_O"
      value="O"
    >
      Other
    </option>
  </select>
</div>
`;

exports[`SelectInput it renders an empty option if one is allowed 1`] = `
<div
  className=""
  key="select-containermyField"
  title=""
>
  <select
    id="myField"
    key="myField"
    name="myField"
    onChange={[Function]}
    value={0}
  >
    <option
      id="myField_0"
      key="myField_0"
      value={0}
    >
      None
    </option>
    <option
      id="myField_H"
      key="myField_H"
      value="H"
    >
      Home
    </option>
  </select>
</div>
`;

exports[`SelectInput it renders an error, title and a passed class 1`] = `
<div
  className="pink error"
  key="select-containermyField"
  title="show an error"
>
  <select
    id="myField"
    key="myField"
    multiple={false}
    name="myField"
    onChange={[Function]}
    title="show a title"
    value="A"
  >
    <option
      id="myField_H"
      key="myField_H"
      value="H"
    >
      Home
    </option>
    <option
      id="myField_A"
      key="myField_A"
      value="A"
    >
      Away
    </option>
    <option
      id="myField_O"
      key="myField_O"
      value="O"
    >
      Other
    </option>
  </select>
</div>
`;

exports[`SelectInput it renders the default value as selected if no value is passed 1`] = `
<div
  className=""
  key="select-containermyField"
  title=""
>
  <select
    id="myField"
    key="myField"
    multiple={false}
    name="myField"
    onChange={[Function]}
    value="A"
  >
    <option
      id="myField_H"
      key="myField_H"
      value="H"
    >
      Home
    </option>
    <option
      id="myField_A"
      key="myField_A"
      value="A"
    >
      Away
    </option>
    <option
      id="myField_O"
      key="myField_O"
      value="O"
    >
      Other
    </option>
  </select>
</div>
`;

exports[`SelectInput it renders with minimum data 1`] = `
<div
  className=""
  key="select-containermyField"
  title=""
>
  <select
    id="myField"
    key="myField"
    name="myField"
    onChange={[Function]}
    value={0}
  >
    <option
      id="myField_H"
      key="myField_H"
      value="H"
    >
      Home
    </option>
  </select>
</div>
`;

exports[`SelectInput it sets a value to selected when multiple select and values 1`] = `
<div
  className=""
  key="select-containermyField"
  title=""
>
  <select
    id="myField"
    key="myField"
    multiple={true}
    name="myField"
    onChange={[Function]}
    value={
      Array [
        "1",
        "3",
      ]
    }
  >
    <option
      id="myField_1"
      key="myField_1"
      value="1"
    >
      Home
    </option>
    <option
      id="myField_2"
      key="myField_2"
      value="2"
    >
      Away
    </option>
    <option
      id="myField_3"
      key="myField_3"
      value="3"
    >
      Other
    </option>
  </select>
</div>
`;

exports[`SelectInput it sets a value to selected when single value 1`] = `
<div
  className=""
  key="select-containermyField"
  title=""
>
  <select
    id="myField"
    key="myField"
    multiple={true}
    name="myField"
    onChange={[Function]}
    value={
      Array [
        "A",
      ]
    }
  >
    <option
      id="myField_0"
      key="myField_0"
      value={0}
    >
      None
    </option>
    <option
      id="myField_H"
      key="myField_H"
      value="H"
    >
      Home
    </option>
    <option
      id="myField_A"
      key="myField_A"
      value="A"
    >
      Away
    </option>
    <option
      id="myField_O"
      key="myField_O"
      value="O"
    >
      Other
    </option>
  </select>
</div>
`;
